--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
 body {
-  background-image: url("img_girl.jpg");
+  background-image: url("images/together.jpg");
+}
+
+.card {
+  border: 1px solid black;
+  margin: 10px;
+  color: green;
 }
